[gd_scene load_steps=19 format=3 uid="uid://b3g5a0hns4gg4"]

[ext_resource type="Texture2D" uid="uid://begsf3r5rvnmu" path="res://Textures/dungeon_background.png" id="1_4h44c"]
[ext_resource type="Script" uid="uid://dhdv5wc865kox" path="res://Rooms/room_R1.gd" id="1_kovff"]
[ext_resource type="PackedScene" uid="uid://bt1y1u8tsrjn1" path="res://player.tscn" id="2_kovff"]
[ext_resource type="Texture2D" uid="uid://b5w5ufk2q7x6i" path="res://Textures/dungeon_wall.jpg" id="4_ituwh"]
[ext_resource type="Texture2D" uid="uid://bvw56lc5sjmna" path="res://Textures/dungeon_wall_long.jpg" id="5_01wad"]
[ext_resource type="PackedScene" uid="uid://bsqixovrqmxws" path="res://pause_button.tscn" id="6_01wad"]
[ext_resource type="PackedScene" uid="uid://r23q16b1sjvx" path="res://SpikeTrap.tscn" id="6_drvye"]
[ext_resource type="PackedScene" uid="uid://b48fjx60a3lpv" path="res://pause_menu.tscn" id="7_2r801"]

[ext_resource type="PackedScene" path="res://health.tscn" id="7_lj7xt"]

[ext_resource type="Texture2D" uid="uid://dnkluqtc2jkk" path="res://Icons/reset-svgrepo-com.svg" id="8_3jk76"]
[ext_resource type="PackedScene" uid="uid://lj75ulh8mvmu" path="res://inventory/items/coin.tscn" id="9_xmgjn"]
[ext_resource type="Texture2D" uid="uid://cnjvxrxkbv1uj" path="res://Textures/skull.png" id="12_k3te0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4h44c"]
size = Vector2(55, 98)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6fkv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ovh4k"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_lnvlp"]
radius = 294.977

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnvlp"]
size = Vector2(110, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drvye"]
size = Vector2(62, 96)

[node name="RoomR1" type="Node2D"]
script = ExtResource("1_kovff")

[node name="floor" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="floor"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.00065, 0.996792)
texture = ExtResource("1_4h44c")

[node name="SpikeTrap" parent="floor" instance=ExtResource("6_drvye")]
position = Vector2(805, 486)
scale = Vector2(0.999605, 0.96954)

[node name="Player" parent="." instance=ExtResource("2_kovff")]
position = Vector2(26, 544)

[node name="wall" type="Node2D" parent="."]

[node name="TextureRect11" type="TextureRect" parent="wall"]
offset_left = 171.0
offset_top = 214.0
offset_right = 261.0
offset_bottom = 502.0
scale = Vector2(0.645669, 0.560487)
texture = ExtResource("4_ituwh")

[node name="TextureRect13" type="TextureRect" parent="wall"]
offset_left = 403.0
offset_top = 217.0
offset_right = 493.0
offset_bottom = 505.0
scale = Vector2(0.645669, 0.560487)
texture = ExtResource("4_ituwh")
flip_h = true

[node name="TextureRect12" type="TextureRect" parent="wall"]
offset_left = 403.0
offset_top = 269.0
offset_right = 493.0
offset_bottom = 557.0
scale = Vector2(0.645669, 0.560487)
texture = ExtResource("4_ituwh")
flip_h = true

[node name="TextureRect" type="TextureRect" parent="wall"]
offset_right = 525.0
offset_bottom = 54.0
scale = Vector2(0.986138, 1)
texture = ExtResource("5_01wad")

[node name="TextureRect2" type="TextureRect" parent="wall"]
offset_left = 337.0
offset_right = 862.0
offset_bottom = 54.0
scale = Vector2(1.00168, 1.02767)
texture = ExtResource("5_01wad")

[node name="TextureRect7" type="TextureRect" parent="wall"]
offset_left = 980.0
offset_top = 647.0
offset_right = 1070.0
offset_bottom = 935.0
rotation = -1.5708
scale = Vector2(0.611178, 0.595655)
texture = ExtResource("4_ituwh")
flip_v = true

[node name="TextureRect5" type="TextureRect" parent="wall"]
offset_top = 592.0
offset_right = 525.0
offset_bottom = 646.0
scale = Vector2(1.00168, 1.02767)
texture = ExtResource("5_01wad")

[node name="TextureRect10" type="TextureRect" parent="wall"]
offset_left = 231.0
offset_top = 431.0
offset_right = 756.0
offset_bottom = 485.0
scale = Vector2(0.985346, 1.01864)
texture = ExtResource("5_01wad")

[node name="TextureRect8" type="TextureRect" parent="wall"]
offset_left = 57.0
offset_top = -1.00003
offset_right = 582.0
offset_bottom = 53.0
rotation = 1.5708
scale = Vector2(0.924074, 1.04673)
texture = ExtResource("5_01wad")

[node name="TextureRect6" type="TextureRect" parent="wall"]
offset_left = 1035.0
offset_top = 648.0
offset_right = 1560.0
offset_bottom = 702.0
rotation = 3.14159
scale = Vector2(0.990883, 1.04098)
texture = ExtResource("5_01wad")
flip_v = true

[node name="TextureRect3" type="TextureRect" parent="wall"]
offset_left = 978.0
offset_top = 55.0
offset_right = 1068.0
offset_bottom = 343.0
rotation = -1.5708
scale = Vector2(0.611178, 0.603318)
texture = ExtResource("4_ituwh")

[node name="TextureRect9" type="TextureRect" parent="wall"]
offset_left = 172.0
offset_top = 323.0
offset_right = 262.0
offset_bottom = 611.0
scale = Vector2(0.645669, 0.560487)
texture = ExtResource("4_ituwh")

[node name="TextureRect4" type="TextureRect" parent="wall"]
offset_left = 1094.0
offset_top = 485.0
offset_right = 1619.0
offset_bottom = 539.0
rotation = -1.5708
scale = Vector2(0.923809, 1.07006)
texture = ExtResource("5_01wad")

[node name="TextureRect14" type="TextureRect" parent="wall"]
offset_left = 1151.0
offset_top = 271.0
offset_right = 1676.0
offset_bottom = 325.0
rotation = 3.14159
scale = Vector2(0.993174, 1.01689)
texture = ExtResource("5_01wad")
flip_v = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-28.5, 538)
shape = SubResource("RectangleShape2D_4h44c")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
polygon = PackedVector2Array(0, 0, 511.044, 1.18435, 564.926, 1.30923, 863, 2, 862, 53, 56, 53, 58, 480, -56, 483, -56, 594.552, 1150, 593, 1211, 595, 1208, 480, 1094, 483, 1095, 434, 1094, 266, 636, 271, 627, 214, 1095.28, 218.477, 1092.75, 51.823, 976, 54, 978, 1, 972, -48, 862, -43, 861, 2, 829, 2, 833, -69, 862, -68, 975, -67, 996, -67, 998, -1, 1092, 2, 1153, 3, 1150, 219, 1211, 430, 1243, 483, 1248, 590, 1251, 651, 1152, 648, -79, 644, -72.4468, 468.161, 2, 474)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
polygon = PackedVector2Array(171, 214, 172, 485, 747, 489, 745, 429, 458, 429, 462, 218, 401, 219, 401, 429, 232, 428, 233, 214)

[node name="pause_button" parent="." instance=ExtResource("6_01wad")]
offset_left = 1107.0
offset_top = 9.0
offset_right = 1107.0
offset_bottom = 9.0

[node name="Health" parent="." instance=ExtResource("7_lj7xt")]
unique_name_in_owner = true
position = Vector2(64, 41)

[node name="Pause_menu" parent="." instance=ExtResource("7_2r801")]
visible = false
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 545.0
offset_top = 284.0
offset_right = 545.0
offset_bottom = 284.0
scale = Vector2(0.960175, 1.01674)
size_flags_vertical = 4

[node name="reset" type="Button" parent="."]
offset_left = 1048.0
offset_top = 11.0
offset_right = 1848.0
offset_bottom = 811.0
scale = Vector2(0.0428735, 0.0405039)
theme_override_styles/hover = SubResource("StyleBoxFlat_h6fkv")
theme_override_styles/normal = SubResource("StyleBoxFlat_ovh4k")
icon = ExtResource("8_3jk76")

[node name="coin" parent="." instance=ExtResource("9_xmgjn")]
position = Vector2(316, 331)

[node name="coin2" parent="." instance=ExtResource("9_xmgjn")]
position = Vector2(295, 365)

[node name="coin3" parent="." instance=ExtResource("9_xmgjn")]
position = Vector2(331, 361)

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(252, 241)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(6, -1.19209e-07)
scale = Vector2(0.0683485, 0.0680157)
shape = SubResource("CircleShape2D_lnvlp")
debug_color = Color(0.85098, 0.231373, 0.729412, 0.964706)

[node name="Sprite2D" type="Sprite2D" parent="Area2D2"]
position = Vector2(7, 2)
scale = Vector2(0.552642, 0.548293)
texture = ExtResource("12_k3te0")

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(918, -23)
shape = SubResource("RectangleShape2D_lnvlp")

[node name="Area2D4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2(1183, 537)
shape = SubResource("RectangleShape2D_drvye")

[node name="SpawnStart" type="Marker2D" parent="."]
position = Vector2(24, 543)

[node name="SpawnR1U1" type="Marker2D" parent="."]
position = Vector2(924, 39)

[node name="SpawnR2" type="Marker2D" parent="."]
position = Vector2(1128, 540)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
[connection signal="body_entered" from="Area2D2" to="Player" method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_3_body_entered"]
[connection signal="body_entered" from="Area2D4" to="." method="_on_area_2d_4_body_entered"]
